Fixed scrollbar issues by using getBoundingClientRect() instead of offsetHeight and offsetWith. getBoundingClientRect() returns floats instead of ints. We need this for out rem units now. I had to remove the menu transition of menu's because it returned the dimensions before the transition now. Ending up in scalled dimensions.

--- a/style/_form.scss
+++ b/style/_form.scss
@@ -385,7 +385,7 @@
 			color: config.$colorTextSecondary;
 			vertical-align: top;
 			position:absolute;
-			left: util.dp(16);
+			left: util.dp(12);
 			top: util.dp(-6.5);
 		}
 
